--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Faberfood" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/yellow</item>
+         <item name="colorPrimaryVariant">@color/brown</item>
+
+        <item name="android:textColor">@color/darkBlue</item>
+        <item name="android:background">@color/ligthGray</item>
+
+        <item name="colorButtonNormal">@color/yellow</item>
     </style>
 
     <style name="Theme.Faberfood" parent="Base.Theme.Faberfood" />
