--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="yellow">#d7a629</color>
-    <color name="brown">#3c210c</color>
+    <color name="yellow">#DFC140</color>
+    <color name="brown">#A95534</color>
     <color name="terracotta">#995555</color>
-    <color name="ligthGray">#FCFCFC</color>
+    <color name="ligthGray">#EEECE0</color>
     <color name="gray">#4F5663</color>
     <color name="darkBlue">#061023</color>
     <color name="red">#C60000</color>
