--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -170,13 +170,12 @@
                     android:id="@+id/buttonCheckout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/bottom_border"
                     android:text="Checkout "
                     android:textAllCaps="false"
                     android:textColor="@color/brown"
                     android:textSize="17dp"
-                    android:textStyle="bold"
-                    android:background="@drawable/bottom_border"
-                    />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
