ADD: logica para agregar producto al carrito de compras

--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -16,7 +16,7 @@
         android:padding="16dp">
 
         <ImageView
-            android:id="@+id/imageProductCart"
+            android:id="@+id/imageProduct"
             android:layout_width="wrap_content"
             android:layout_height="98dp"
             app:srcCompat="@mipmap/pizza" />
@@ -39,7 +39,7 @@
                 android:textSize="15dp" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/descriptionProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -65,7 +65,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/addQuantityButton"
+                    android:id="@+id/addProductButton"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
