--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/textView2"
         android:layout_width="336dp"
         android:layout_height="45dp"
-        android:text="Deliciosamente tuyo, con FaborFoot"
+        android:text="Deliciosamente tuyo, con FaborFood"
         android:textColor="#A95534"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
