--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,7 @@
     android:background="@drawable/background"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".SignupActivity">
-
+    tools:context=".LoginActivity">
     <EditText
         android:id="@+id/signupEmail"
         android:layout_width="0dp"
@@ -66,6 +65,7 @@
         android:id="@+id/logintext"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
         android:gravity="center"
         android:text="@string/no_tienes_una_cuenta_incribirse"
         android:textColor="@color/terracotta"
@@ -99,5 +99,6 @@
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="152dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
