--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/borderyellow"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/borderyellow"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,34 +12,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        android:text="Faborfood"
+        android:text="@string/faborfood"
         android:textColor="#A95534"
         android:textSize="50sp"
         android:textStyle="normal|italic"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="123dp" />
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.691"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="336dp"
-        android:layout_height="45dp"
-        android:text="Deliciosamente tuyo, con FaborFoot"
+        android:layout_width="352dp"
+        android:layout_height="61dp"
+        android:breakStrategy="high_quality"
+        android:gravity="center"
+        android:text="@string/deliciosamente_tuyo_con_faborfoot"
         android:textColor="#A95534"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.737" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.262"
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="275dp"
         android:layout_height="281dp"
         android:src="@drawable/logofaborfood"
-        tools:layout_editor_absoluteX="68dp"
-        tools:layout_editor_absoluteY="206dp" />
+        android:contentDescription="@null"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="203dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
