--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,129 +8,140 @@
     android:padding="16dp"
     tools:context=".SignupActivity">
 
+
     <TextView
-        android:id="@+id/textBienvenidoFaborFood"
+        android:id="@+id/TextBienvenido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
         android:background="#00FFFFFF"
-        android:paddingStart="50dp"
-        android:text="@string/bienvenido_a_faborfood"
+        android:text="@string/bienvenido"
         android:textColor="@color/brown"
         android:textSize="50sp"
         android:textStyle="normal|italic"
-        tools:ignore="MissingConstraints,RtlSymmetry"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-3dp" />
-
-    <TextView
-        android:id="@+id/textRegístrarse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
-        android:text="Regístrarse"
-        android:textColor="@color/brown"
-        android:textSize="24sp"
-        android:textStyle="normal|italic"
-        tools:ignore="HardcodedText,MissingConstraints"
-        tools:layout_editor_absoluteX="137dp"
-        tools:layout_editor_absoluteY="127dp" />
-
-    <EditText
-        android:id="@+id/signupNombre"
-        android:layout_width="310dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="180dp"
-        android:background="@drawable/borderbrown"
-        android:hint="@string/nombres"
-        android:hyphenationFrequency="normal"
-        android:padding="12dp"
-        android:textColor="@color/brown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TextFields"
-        android:autofillHints="" />
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textingCuenta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="#00FFFFFF"
+        android:text="@string/ingrese_a_su_cuenta"
+        android:textColor="@color/brown"
+        android:textSize="24sp"
+        android:textStyle="normal|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextBienvenido"
+        tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/signupApellido"
-        android:layout_width="311dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:id="@+id/nombres"
+        android:layout_width="347dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="@drawable/borderbrown"
-        android:hint="@string/apellidos"
+        android:hint="nombres"
         android:hyphenationFrequency="normal"
+        android:inputType="text"
         android:padding="12dp"
         android:textColor="@color/brown"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupNombre"/>
+        app:layout_constraintTop_toBottomOf="@+id/textingCuenta"
+        tools:ignore="Autofill,HardcodedText" />
 
     <EditText
-        android:id="@+id/signupCorreo"
-        android:layout_width="311dp"
-        android:layout_height="48dp"
+        android:id="@+id/apellidos"
+        android:layout_width="347dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/borderbrown"
-        android:hint="@string/correoelectronico"
+        android:hint="apellidos"
         android:hyphenationFrequency="normal"
+        android:inputType="text"
         android:padding="12dp"
         android:textColor="@color/brown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupApellido"/>
+        app:layout_constraintTop_toBottomOf="@+id/nombres"
+        tools:ignore="Autofill" />
+
+    <EditText
+        android:id="@+id/signupEmail"
+        android:layout_width="347dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/borderbrown"
+        android:hint="@string/correo_electronico"
+        android:hyphenationFrequency="normal"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
+        android:textColor="@color/brown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/apellidos"
+        tools:ignore="Autofill" />
 
     <EditText
         android:id="@+id/signupPassword"
-        android:layout_width="311dp"
+        android:layout_width="347dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="20dp"
+        android:autofillHints=""
         android:background="@drawable/borderbrown"
         android:hint="@string/contrasena"
+        android:inputType="textPassword"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupCorreo"/>
+        app:layout_constraintTop_toBottomOf="@+id/signupEmail" />
 
     <EditText
-        android:id="@+id/signupconfPassword"
-        android:layout_width="311dp"
+        android:id="@+id/signupPassword2"
+        android:layout_width="347dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
+        android:autofillHints=""
         android:background="@drawable/borderbrown"
         android:hint="@string/confirmar_contrasena"
+        android:inputType="textPassword"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupPassword"/>
+        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />
 
     <Button
         android:id="@+id/signupbutton"
-        android:layout_width="347dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/registrese"
-        android:textColor="@color/terracotta"
+        android:layout_marginTop="28dp"
+        android:text="@string/ingresar"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="@color/gray"
         android:textSize="20sp"
+        android:background="@drawable/borderbrown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupconfPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/signupPassword2" />
+
     <TextView
         android:id="@+id/logintext"
-        android:layout_width="0dp"
+        android:layout_width="379dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="@string/tienes_cuenta_iniciar_sesion"
+        android:text="@string/no_tienes_una_cuenta_incribirse"
         android:textColor="@color/terracotta"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupbutton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
